--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,7 +14,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTomarFoto"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ActividadValidacion"
+            android:exported="false" />
+        <activity
+            android:name=".ActividadContador"
+            android:exported="false" />
+        <activity
+            android:name=".ActividadCiclos"
+            android:exported="false" />
         <activity
             android:name=".ActividadSonidos"
             android:exported="false" />
@@ -26,7 +35,7 @@
             android:exported="false" />
         <activity
             android:name=".ActividadLista"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
